Completed the website using HTML

--- a/recipes/stuffedchicken.html
+++ b/recipes/stuffedchicken.html
@@ -10,5 +10,29 @@
     <h1>Stuffed Chicken Breast</h1>
 
     <img src="stuffedchicken.png">
+
+    <p>A tasty mixture of cream cheese, Cheddar, and cilantro adds delicious flavor to bacon-stuffed chicken breasts.</p>
+
+    <em>Ingredients<em>
+    <ul>1 pound bacon</ul>
+    <ul>6 (5 ounce) skinless, boneless chicken breast halves</ul>
+    <ul>1 (8 ounce) package cream cheese, softened</ul>
+    <ul>¾ cup shredded Cheddar cheese, divided</ul>
+    <ul>¼ cup chopped green onions, or to taste</ul>
+    <ul>¼ cup chopped fresh cilantro, or to taste</ul>
+    <ul>1 tablespoon minced garlic</ul>
+
+    <strong>Steps</strong>
+    <li>Preheat oven to 350 degrees F (175 degrees C). Line a baking sheet and a baking pan with foil.</li>
+    <li>Lay bacon strips in a single layer on the prepared baking sheet.</li>
+    <li>Place bacon in the preheated oven and cook until browned and crisp, about 15 minutes. Drain bacon slices on paper towels and chop. Keep the oven on.</li>
+    <li>Slice chicken breasts horizontally, without going all the way through.</li>
+    <li>Combine cream cheese, 1/4 cup of Cheddar cheese, green onions, and cilantro in a bowl. Add chopped bacon and mix to combine.</li>
+    <li>Open chicken breasts at the hinge point and spread cream cheese mixture in a thin layer over each one. Close and transfer to the prepared baking pan.</li>
+    <li>Bake in the preheated oven for 30 minutes. Top with remaining Cheddar and bake until chicken is no longer pink in the center and the juices run clear, about 10 more minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
+    <li>Let coli slightly before serving.</li> 
+
+
+
 </body>
 </html>
