--- a/recipes/stuffedchicken.html
+++ b/recipes/stuffedchicken.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<<device-width>>, initial-scale=1.0">
@@ -9,7 +10,7 @@
 <body>
     <h1>Stuffed Chicken Breast</h1>
 
-    <img src="stuffedchicken.png">
+    <img src="stuffedchicken.png" alt="stuffed chicken" class="center">
 
     <p>A tasty mixture of cream cheese, Cheddar, and cilantro adds delicious flavor to bacon-stuffed chicken breasts.</p>
 
@@ -23,6 +24,7 @@
     <ul>1 tablespoon minced garlic</ul>
 
     <strong>Steps</strong>
+    
     <li>Preheat oven to 350 degrees F (175 degrees C). Line a baking sheet and a baking pan with foil.</li>
     <li>Lay bacon strips in a single layer on the prepared baking sheet.</li>
     <li>Place bacon in the preheated oven and cook until browned and crisp, about 15 minutes. Drain bacon slices on paper towels and chop. Keep the oven on.</li>
