Test link in index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <a href="recipes/stuffedchicken.html">Stuffed Chicken</a>
 
+    <a href="https://hebbarskitchen.com/masala-pasta-recipe-indian-pasta-recipes/">Pasta</a>
+
     
 </body>
 </html>
