Little changes and removing bugs

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <a href="https://hebbarskitchen.com/masala-pasta-recipe-indian-pasta-recipes/">Pasta</a>
 
+    <a hred="https://www.allrecipes.com/recipe/7016/french-toast-i/">French Toast</a>
+
     
 </body>
 </html>
